--- a/7.0 CSS Cascade/style.css
+++ b/7.0 CSS Cascade/style.css
@@ -1,5 +1,7 @@
 /* Don't change the existing CSS. */
-
+#outer-box{
+  background-color: purple;
+}
 .box {
   background-color: blue;
   padding: 10px;
@@ -10,3 +12,10 @@ p {
   margin: 0;
   padding: 0;
 }
+.white-text{
+  color: white;
+}
+.inner-box{
+  background-color: red;
+}
+
