--- a/8.4 Web Design Agency Project/style.css
+++ b/8.4 Web Design Agency Project/style.css
@@ -14,6 +14,12 @@ h1 {
   font-size: 5rem;
 }
 
+.creative{
+  color:midnightblue ;
+}
+
+
+
 footer {
   text-align: right;
   color: midnightblue;
