--- a/8.4 Web Design Agency Project/style.css
+++ b/8.4 Web Design Agency Project/style.css
@@ -14,14 +14,47 @@ h1 {
   font-size: 5rem;
 }
 
-.creative{
-  color:midnightblue ;
-}
-
-
-
 footer {
   text-align: right;
   color: midnightblue;
 }
+.creative{
+  color:midnightblue ;
+}
+  .tile-image {
+  height: 200px;
+  float: left;
+  margin-right: 50px;
+}
+.left{
+  float: left;
+}
+.right{
+  float: right;
+}
+.card {
+  width: 50%;
+}
 
+@media(max-width:680px){
+
+  .logo{
+    width: 100px;
+  }
+   h1 {
+    font-size: 3.5rem;
+    text-align: center;
+  }
+  .card{
+    display: block;
+    width:100%;
+    margin-bottom: 30px;
+    text-align: justify;
+  }
+  .card img{
+     margin-bottom: 10px;
+    width: 100%;
+    object-fit: cover;
+    display: inline;
+  }
+}
